--- a/trackpad/trackpad.css
+++ b/trackpad/trackpad.css
@@ -3,16 +3,25 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+html,body{
+	height: 100vh;
+	width: 100%;
+}
 
 .app {
+	box-sizing: border-box;
 	user-select: none;
+	padding: 5px 0px;
+	width: 360px;
+	height: 100vh;
 }
 
 .stage {
 	position: relative;
-	height: 300px;
+	height: 250px;
+	width: 350px;
 	width: 100%;
-	padding: 10px;
+	/* padding: 10px; */
 	background: #D3D6B8;
 }
 
@@ -32,8 +41,9 @@
 .trackpad {
 	width: 100%;
 	height: 250px;
-	margin: 5px auto;
+	/* margin: 5px auto; */
 	background: #7A989D;
+	/* width: 350px; */
 
 }
 
@@ -48,7 +58,6 @@
 	align-items: center;
 	width: 100%;
 	height: 100px;
-	;
 	background: #C5C5C5;
 }
 
