--- a/trackpad/trackpad.css
+++ b/trackpad/trackpad.css
@@ -21,15 +21,15 @@ html,body{
 	height: 250px;
 	width: 350px;
 	width: 100%;
-	/* padding: 10px; */
+	padding: 10px;
 	background: #D3D6B8;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 #block {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 10;
+	left: 10;
 	width: 50px;
 	height: 50px;
 	border: 1px solid white;
@@ -37,6 +37,7 @@ html,body{
 	background: #5A899C;
 	box-shadow: 0 0 5px 1px #3A3B42;
 	transition: 0.5s ease-out;
+	z-index: 590;
 }
 
 .trackpad {
