--- a/trackpad/trackpad.css
+++ b/trackpad/trackpad.css
@@ -3,7 +3,9 @@
 	margin: 0;
 	box-sizing: border-box;
 }
-html,body{
+
+html,
+body {
 	height: 100vh;
 	width: 100%;
 }
@@ -36,7 +38,7 @@ html,body{
 	border-radius: 50%;
 	background: #5A899C;
 	box-shadow: 0 0 5px 1px #3A3B42;
-	transition: 0.5s ease-out;
+	/* transition: 0.05s ease-out; */
 	z-index: 590;
 }
 
