--- a/trackpad/trackpad.css
+++ b/trackpad/trackpad.css
@@ -20,7 +20,7 @@ body {
 
 .stage {
 	position: relative;
-	height: 250px;
+	height: 350px;
 	width: 350px;
 	width: 100%;
 	padding: 10px;
@@ -39,8 +39,9 @@ body {
 	border-radius: 50%;
 	background: #5A899C;
 	box-shadow: 0 0 5px 1px #3A3B42;
-	transition: 0.01s;
 	/* z-index: 590; */
+	/* transition: 2s top; */
+	transition: 0.5s width, 0.6s height, 0.05s top, 0.05s left;
 }
 
 .trackpad {
@@ -49,6 +50,7 @@ body {
 	/* margin: 5px auto; */
 	background: #7A989D;
 	/* width: 350px; */
+	box-shadow: 0 0 200px 0px inset #4E7B81;
 
 }
 
@@ -57,6 +59,7 @@ body {
 	position: sticky;
 	bottom: 0;
 	display: flex;
+	display: none;
 	flex-direction: row;
 	gap: 10px;
 	justify-content: space-evenly;
