--- a/svg-trackpad/svgpad.css
+++ b/svg-trackpad/svgpad.css
@@ -17,6 +17,7 @@ body {
   width: 100%;
   height: 100%;
   /* min-width:100vw;min-height:100vh; */
+  background: #717569b6;
 }
 
 #app {
@@ -24,12 +25,15 @@ body {
   grid-template-rows: 48px 1fr 280px;
   grid-template-columns: 1fr;
   gap: 0px;
-
+justify-content: center;
+align-items: center;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  /* padding: 6px; */
-  /* min-width:100vw;min-height:100vh; */
+  margin: auto;
+  padding: 12px;
+  max-width: 424px;
+  background: #81A528;
 }
 
 #appHeader {
@@ -100,6 +104,7 @@ body {
 #trackpad {
   background: #697176;
 }
+
 #trackpad-controls {
   background: #444E54;
 }
